Feat: Add optional Basic Authentication and Security documentation

--- a/config.env.sample
+++ b/config.env.sample
@@ -10,6 +10,10 @@
 # Your Azure AD Client Secret (only required for specific custom Enterprise Applications)
 #EWS_OAUTH_PROXY_CLIENT_SECRET=""
 
+# Optional: Require email clients to authenticate with these credentials
+#EWS_OAUTH_PROXY_USERNAME="my-email@example.com"
+#EWS_OAUTH_PROXY_PASSWORD="my-secure-proxy-password"
+
 # The IP address and port the proxy should bind to
 #EWS_OAUTH_PROXY_LISTEN_ADDRESS="127.0.0.1:8443"
 
